@@ -1,5 +1,6 @@
 == 1.2.6 ???
  * Auto-detect and load config.ru files on start. Makes Rails 3 work.
+ * Fix signals being ignored under 1.9 when daemonized.
 
 == 1.2.5 This Is Not A Web Server
  * Add rolling restart support (--onebyone option) [sikachu]
